Improved styling of h2/h3 elements - Prevented wrapping on <code> elements

--- a/static/less/components/entry.less
+++ b/static/less/components/entry.less
@@ -35,13 +35,13 @@
 
     h2 {
         font-weight: normal;
-        font-size: @font-size-base + 10;
+        font-size: @font-size-base + 11;
         margin: 30px 0 10px;
     }
 
     h3 {
         font-weight: normal;
-        font-size: @font-size-base + 8;
+        font-size: @font-size-base + 7;
         margin: 30px 0 5px;
     }
 
@@ -50,7 +50,7 @@
     }
 
     li {
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
 
     .lead {
@@ -89,6 +89,11 @@
         border: 1px solid #ddd;
         background-color: #f9f2f4;
         padding: 2px 4px;
+    }
+
+    code {
+        white-space: nowrap;
+        margin: 0 1px;
     }
 
     .muted {
