--- a/static/less/editor-style.less
+++ b/static/less/editor-style.less
@@ -49,7 +49,7 @@ h2 {
 
 h3 {
     font-weight: normal;
-    font-size: @font-size-base + 8;
+    font-size: @font-size-base + 7;
     margin: 30px 0 5px;
 }
 
@@ -89,7 +89,7 @@ p {
 
 li {
     font-size: @font-size-base + 1;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 blockquote {
@@ -117,6 +117,11 @@ code {
     border-radius: @border-radius-base;
     background-color: #f9f2f4;
     padding: 2px 4px;
+}
+
+code {
+    white-space: nowrap;
+    margin: 0 1px;
 }
 
 // Remove the gap between images and the bottom of their containers
